--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.connriver.connrail">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -20,8 +26,6 @@
             </intent-filter>
         </activity>
 
-        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" >
-        </uses-permission>
 
         <activity
             android:name=".About"
@@ -85,6 +89,7 @@
             android:name=".SpotAddEdit"
             android:label="@string/title_spot_add_edit"
             android:parentActivityName=".SpotListActivity"/>
+
 
     </application>
 
