--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,84 +12,70 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".SplashScreenActivity"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity
             android:name=".About"
             android:label="@string/menu_about"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".HelpActivity"
             android:label="@string/menu_help"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".NetworkSettings"
             android:label="@string/action_network_settings"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".ConsistListActivity"
             android:label="@string/menu_consist_list"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".ConsistActivity"
             android:parentActivityName=".ConsistListActivity" />
-
         <activity
             android:name=".YardListActivity"
             android:label="@string/menu_yard_list"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".CarLocationListActivity"
             android:label="@string/menu_car_status"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".CarLocationActivity"
             android:parentActivityName=".CarLocationListActivity" />
-
         <activity
             android:name=".CarListActivity"
             android:label="@string/menu_car_list"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".CarInfoActivity"
             android:label="@string/menu_car_info"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".SpotListActivity"
             android:label="@string/menu_spot_list"
             android:parentActivityName=".MainActivity" />
-
         <activity
             android:name=".CarAddEdit"
             android:label="@string/title_car_add_edit"
             android:parentActivityName=".CarListActivity" />
-
         <activity
             android:name=".SpotAddEdit"
             android:label="@string/title_spot_add_edit"
-            android:parentActivityName=".SpotListActivity"/>
-
-
+            android:parentActivityName=".SpotListActivity" />
     </application>
 
 </manifest>
